0.1.28
- Added methods registerFormat(), unregisterFormat();
- Added options "asObject" to generateDates.

0.1.27
Added method generateDates(), updated incDate() and decDate().

0.1.26
Fixed bug with time zones.

0.1.25
parseInt() changed to Number().

0.1.24
First public version &&  added method getVersion().

0.0.23
method getAvailableLocales(), locales fixed.

0.0.22
localization with setLocale() and getLocale().

0.0.21
method alarm().

0.0.20
method clock().

0.0.19
fixed date() and format().

0.0.18
back to percent formatting.

0.0.17
method reformat() and fixed format().

0.0.16
method time() now accepts strings date and date-format.

0.0.15
method validate().

0.0.14
optimized normalizeDate(), added date(), fixed parse().

0.0.13
added normalizeDate(). Fixed incDate(), decDate(), parse().

0.0.12
optimized between().

0.0.11
fixed time() - now returning in UTC.
time(date) = get timestamp from date.

0.0.10
fixed getDayOfWeek().

0.0.9
getDaysNames() renamed to getDayNames().

0.0.8
fixed format(), now().

0.0.7
bugfix format().

0.0.6
method parse().

0.0.5
method decDate().

0.0.4
method format().

0.0.3
methods getDayOfWeek(), incDate(), between(), getDaysArrayByWeek() and some other.

0.0.2
leap years

0.0.1
first version