@@ -1,6 +1,6 @@
 {
   "name": "tempus",
-  "version": "0.1.27",
+  "version": "0.1.28",
   "homepage": "https://github.com/crusat/tempus-js",
   "authors": [
     "Kuznetsov Aleksey <me@akuzn.com>"
