@@ -1,7 +1,7 @@
 {
     "author": "Kuznetsov Aleksey <me@akuzn.com>",
     "name": "tempus",
-    "version": "0.1.27",
+    "version": "0.1.28",
     "devDependencies": {
         "grunt": "~0.4.1",
         "grunt-contrib-uglify": "~0.2.2"
