@@ -1,6 +1,7 @@
 0.1.28
 - Added methods registerFormat(), unregisterFormat();
 - Added options "asObject" to generateDates.
+- Rewritten methods format() and parse().
 
 0.1.27
 Added method generateDates(), updated incDate() and decDate().
